working on linkeddata draft

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@ title: "Developing Computational Humanities"
 <html>
     <head>
         {% include head.html %}
-
     </head>
     <body>
         <div class="container-fluid">
@@ -23,7 +22,7 @@ title: "Developing Computational Humanities"
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="col-sm-4" style="border-left: 1px solid #103D50;">
+                <div class="col-sm-4" style="border-left: 1px solid #ccc;">
                     {% for project in site.data.projects %}
                     <div class="clearfix">
                         <div class="h4">
