--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Developing Computational Humanities"
+title: "Erick Peirson, PhD | Software Architecture & Socio-Technical Systems"
 ---
 <html>
     <head>
